# sbom-generator

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  workflow.yml
sbom_extractor/: __init__.py  catena_x_generator.py  cli.py  compilation_db.py  cpe.py  cyclonedx_generator.py  html_generator.py  manifest_parser.py  ntia.py  purl.py  scanner.py  spdx3_generator.py  spdx_generator.py  validator.py  vcs.py
tests/: test_parsers.py
