[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-generator"
version = "1.1.0"
description = "Extract SPDX and CycloneDX SBOMs from open-source projects, including the Linux kernel"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Fatih Tekin", email = "fatih.tekin.de@googlemail.com"}]
keywords = ["sbom", "spdx", "cyclonedx", "security", "linux-kernel", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Intended Audience :: Developers",
]
dependencies = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/DrFatihTekin/sbom-generator"
Repository = "https://github.com/DrFatihTekin/sbom-generator"
Issues = "https://github.com/DrFatihTekin/sbom-generator/issues"

[project.scripts]
sbom-extractor = "sbom_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbom_extractor*"]
